DisplayLinks Fixed DisplayLinks now waits for loading to complete before setting state, this fixed an issue where app would crash if request took too long

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,8 +1,10 @@
 .container {
   position: absolute;
+  z-index: -5;
   bottom: 0;
   width: 100%;
   padding: 1rem;
   background-color: #26384a;
   color: white;
+  font-size: small;
 }
