--- a/src/Components/LinkDisplay/LinkDisplay.module.css
+++ b/src/Components/LinkDisplay/LinkDisplay.module.css
@@ -2,3 +2,11 @@
   padding: 1rem;
   font-size: 12px;
 }
+
+.linkDiv {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
